--- a/package.json
+++ b/package.json
@@ -14,9 +14,17 @@
     "@types/react-dom": "18.0.11",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "gsap": "^3.11.5",
     "next": "13.3.0",
+    "nextjs-google-analytics": "^2.3.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-intersection-observer": "^9.4.3",
+    "react-responsive": "^9.0.2",
+    "swiper": "^9.2.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "sass": "^1.62.0"
   }
 }
